// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen literal4.ts 1`] = `
{
  "$name": "literalType",
  "type": 1073741830,
  "value": false,
}
`;

exports[`codegen union2.ts 1`] = `
{
  "$name": "union",
  "members": [
    {
      "type": 1073741826,
    },
    {
      "elementType": {
        "type": 1073741827,
      },
      "type": 5,
    },
  ],
  "type": 536870912,
}
`;

exports[`codegen string.ts 1`] = `
{
  "$name": "stringType",
  "type": 1073741828,
}
`;

exports[`codegen literal1.ts 1`] = `
{
  "$name": "literalType",
  "type": 1073741830,
  "value": 1,
}
`;

exports[`codegen array1.ts 1`] = `
{
  "$name": "array",
  "elementType": {
    "type": 1073741826,
  },
  "type": 5,
}
`;

exports[`codegen undefined.ts 1`] = `
{
  "$name": "undefinedType",
  "type": 1073741824,
}
`;

exports[`codegen boolean.ts 1`] = `
{
  "$name": "booleanType",
  "type": 1073741827,
}
`;

exports[`codegen array2.ts 1`] = `
{
  "$name": "array",
  "elementType": {
    "elementType": {
      "type": 1073741826,
    },
    "type": 5,
  },
  "type": 5,
}
`;

exports[`codegen number.ts 1`] = `
{
  "$name": "numberType",
  "type": 1073741826,
}
`;

exports[`codegen null.ts 1`] = `
{
  "$name": "nullType",
  "type": 1073741825,
}
`;

exports[`codegen object.ts 1`] = `
{
  "$name": "objectType",
  "members": {
    "a": {
      "type": 1073741826,
    },
    "b": {
      "type": 1073741827,
    },
  },
  "type": 6,
}
`;

exports[`codegen union1.ts 1`] = `
{
  "$name": "union",
  "members": [
    {
      "type": 1073741826,
    },
    {
      "type": 1073741827,
    },
  ],
  "type": 536870912,
}
`;

exports[`codegen literal2.ts 1`] = `
{
  "$name": "literalType",
  "type": 1073741830,
  "value": "2",
}
`;

exports[`codegen literal3.ts 1`] = `
{
  "$name": "literalType",
  "type": 1073741830,
  "value": true,
}
`;
